Prevent zone margin and overlap issues per Holly's request

--- a/media/redesign/stylus/zones.styl
+++ b/media/redesign/stylus/zones.styl
@@ -96,7 +96,6 @@
     p {
       @extend .larger;
       font-weight: light-font-weight;
-      margin-right: 220px;
     }
   }
 
@@ -108,6 +107,7 @@
     width: 468px;
     bottom: 0;
     background-repeat: no-repeat;
+    background-position: 95% 0;
   }
 
   a.button {
@@ -288,15 +288,6 @@
       .zone-image {
         opacity: 0.2;
       }
-  }
-
-  .zone-landing-header {
-
-    .masthead-text {
-      p {
-        margin-right: 0;
-      }
-    }
   }
 }
 
